# dukto6

./: .gitignore  CMakeLists.txt  Main.qml  README.md  assets.qrc  main.cpp  qml.qrc
android/: AndroidManifest.xml
android/res/values/: strings.xml
android/res/xml/: qtprovider_paths.xml
android/src/idv/coolshou/: FileUtils.java
debian/: README.txt  dukto.desktop  package-dukto.sh
src/: buddylistitemmodel.cpp  duktoprotocol.cpp  guibehind.cpp  guibehind.h  main.cpp  platform.cpp  recentlistitemmodel.cpp  updateschecker.cpp  winhelper.cpp  winhelper.h
src/qml/dukto6/: AboutPage.qml  BottomToolBar.qml  BuddiesPage.qml  BuddyListComponent.qml  Button.qml  ButtonDark.qml  ColorBox.qml  ColorPicker.qml  ColorSlider.qml  ColorUtils.js  DialogNavBar.qml  DuktoInner.qml  DuktoOverlay.qml  FileFolderDialog.qml  IpPage.qml  Main.qml  MessagePage.qml  ProgressPage.qml  RecentPage.qml  SBPicker.qml  SText.qml  STextInput.qml  SendPage.qml  SettingsPage.qml  ShowTextPage.qml  SmoothText.qml  TermsPage.qml  TopTabBar.qml  UpdatesBox.qml
